# Telephone-Booth

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .release-please-config.json  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  bower.json  checkrunning.sh  config-sample.js  deny.toml  index.html  index.js  justfile  mise.toml  package.json  rust-toolchain.toml  server.js  telephone-booth-archive-keyring.gpg
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: markdown.instructions.md  rust.instructions.md
.github/workflows/: audit.yml  auto-tag-on-merge.yml.disabled  ci.yml  publish-apt.yml  publish.yml  release-please.yml
crates/booth-bin/: Cargo.toml  README.md
crates/booth-bin/src/: event_spool.rs  file_storage.rs  lib.rs  main.rs  observability.rs  pending_uploads.rs  simulator.rs
crates/booth-bin/tests/: cli_smoke.rs  observability.rs  runtime_loop.rs  tailscale_status_cmd.rs
crates/booth-core/: Cargo.toml
crates/booth-core/src/: lib.rs
crates/booth-debug/: Cargo.toml  README.md
crates/booth-debug/src/: lib.rs  simulator_ui.html
crates/booth-debug/tests/: auth.rs  http_smoke.rs  logs.rs  metrics.rs  shutdown.rs  simulate.rs  ws_smoke.rs
crates/booth-debug/tests/common/: mod.rs
crates/booth-hal/: Cargo.toml
crates/booth-hal/src/: lib.rs
crates/booth-metrics/: Cargo.toml
crates/booth-metrics/src/: lib.rs
crates/booth-mock/: Cargo.toml
crates/booth-mock/src/: lib.rs
crates/booth-pi/: Cargo.toml
crates/booth-pi/assets/: README.md  beep.flac  call-unavailable.flac  dial-tone.flac  line-busy.flac
crates/booth-pi/src/: audio.rs  gpio.rs  lib.rs  mixer.rs  operator.rs  url_policy.rs
crates/booth-pi/tests/: audio_cleanup.rs  audio_config.rs  gpio_config.rs  gpio_loopback.rs  operator_smoke.rs
crates/booth-telemetry/: Cargo.toml
crates/booth-telemetry/src/: lib.rs
dashboards/: README.md  booth-audio.json  booth-call-activity.json  booth-combined.json  booth-overview.json
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-arm64/: Packages
dists/stable/main/binary-armhf/: Packages
docs/: README.md  architecture.md  artist-statement.md  configuration.md  contributing.md  debug-panel.md  getting-started.md  hardware.md  lan-fallback.md  observability.md  operator-api.md  packaging.md  payphone-reference.md  raspberry-pi-setup.md  runbook.md  simulator.md  tailscale.md  troubleshooting.md
docs/adr/: 0001-hexagonal-architecture.md  0002-state-machine-as-pure-core.md  0003-flac-as-recording-format.md  0004-tailscale-serve-for-debug-tls.md  0005-rust-1.95.0.md  0006-observability-stack.md  0007-apt-distribution.md  0008-automated-releases.md
docs/porting/: esp32.md  overview.md  pico.md
models/: messages.js
packaging/debian/: 50-telephone-booth-unattended.conf  config.example.toml  env.example  postinst  prerm  telephone-booth-archive-keyring.gpg  telephone-booth-simulator.service  telephone-booth-tailscale-serve.service  telephone-booth-vmagent.service  telephone-booth.list  telephone-booth.service  telephone-booth.sysusers  telephone-booth.tmpfiles  vmagent.env.example  vmagent.yaml
pool/main/t/telephone-booth/: telephone-booth_0.1.0-1_arm64.deb  telephone-booth_0.1.0-1_armhf.deb  telephone-booth_0.1.1-1_arm64.deb  telephone-booth_0.1.1-1_armhf.deb  telephone-booth_0.2.0-1_arm64.deb  telephone-booth_0.2.0-1_armhf.deb  telephone-booth_0.3.0-1_arm64.deb  telephone-booth_0.3.0-1_armhf.deb  telephone-booth_0.3.1-1_arm64.deb  telephone-booth_0.3.1-1_armhf.deb  telephone-booth_0.3.2-1_arm64.deb  telephone-booth_0.3.2-1_armhf.deb  telephone-booth_0.3.3-1_arm64.deb  telephone-booth_0.3.3-1_armhf.deb  telephone-booth_0.4.0-1_arm64.deb  telephone-booth_0.4.0-1_armhf.deb  telephone-booth_0.4.1-1_arm64.deb  telephone-booth_0.4.1-1_armhf.deb  telephone-booth_0.4.2-1_arm64.deb  telephone-booth_0.4.2-1_armhf.deb  telephone-booth_0.4.3-1_arm64.deb  telephone-booth_0.4.3-1_armhf.deb  telephone-booth_0.5.0-1_arm64.deb  telephone-booth_0.5.0-1_armhf.deb  telephone-booth_0.6.0-1_arm64.deb  telephone-booth_0.6.0-1_armhf.deb  telephone-booth_0.6.1-1_arm64.deb  telephone-booth_0.6.1-1_armhf.deb  telephone-booth_0.6.2-1_arm64.deb  telephone-booth_0.6.2-1_armhf.deb  telephone-booth_0.6.3-1_arm64.deb  telephone-booth_0.6.3-1_armhf.deb  telephone-booth_0.7.0-1_arm64.deb  telephone-booth_0.7.0-1_armhf.deb  telephone-booth_0.7.1-1_arm64.deb  telephone-booth_0.7.1-1_armhf.deb  telephone-booth_0.7.2-1_arm64.deb  telephone-booth_0.7.2-1_armhf.deb  telephone-booth_0.7.3-1_arm64.deb  telephone-booth_0.7.3-1_armhf.deb  (+2 more)
public/javascript/: index.js  services.js
routes/: api.js
scripts/: build-apt-repo.sh  setup-tailscale-serve.sh  telephone-booth-mode.sh  telephone-booth-simulator-tmux.sh
views/: header.pug  index.pug
views/modals/: new_message.pug  new_question.pug
