[workspace]
resolver = "2"
members = [
    "crates/booth-core",
    "crates/booth-hal",
    "crates/booth-telemetry",
    "crates/booth-metrics",
    "crates/booth-mock",
    "crates/booth-debug",
    "crates/booth-pi",
    "crates/booth-bin",
]

[workspace.package]
version = "0.8.1" # x-release-please-version
edition = "2024"
rust-version = "1.95"
license = "BSD-3-Clause"
authors = ["David Jensenius"]
repository = "https://github.com/djensenius/Telephone-Booth"
homepage = "https://github.com/djensenius/Telephone-Booth"
# Workspace crates are internal-only and use `version = "*"` path deps.
# `publish = false` makes that intent explicit and lets cargo-deny's
# `allow-wildcard-paths` apply (it only skips wildcard checks for
# private/non-publishable crates).
publish = false

# Release profile shipped in the .deb. We let the Rust linker strip
# symbols during the build (which knows the target's stripping ABI),
# so cargo-deb does not need to invoke a host `strip` on a
# cross-compiled binary. See `publish.yml` which passes
# `cargo deb --no-strip`.
[profile.release]
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# These pedantic/nursery lints fight ergonomic code or duplicate intent that
# is intentionally explicit (e.g. state-machine match arms that look alike
# but document different transitions).
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
match_same_arms = "allow"
too_many_lines = "allow"
too_long_first_doc_paragraph = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
redundant_clone = "allow"
assigning_clones = "allow"
use_self = "allow"
derivable_impls = "allow"
return_self_not_must_use = "allow"
multiple_crate_versions = "allow"
struct_excessive_bools = "allow"

[workspace.dependencies]
# Workspace crates
booth-telemetry = { path = "crates/booth-telemetry" }

# Core / utility
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
heapless = "0.8"
arrayvec = "0.7"
sha2 = "0.10"
url = "2"
parking_lot = "0.12"
subtle = "2.6"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Metrics / system stats
sysinfo = "0.32"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
metrics-util = "0.18"

# Async / runtime (only used by std adapters)
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# HTTP / WS
axum = { version = "0.8", features = ["ws", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }
rust-embed = { version = "8", features = ["mime-guess", "compression"] }
mime_guess = "2"

# TLS
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# GPIO + audio (Pi)
rppal = { version = "0.19", features = ["hal"] }
alsa = "0.9"
cpal = "0.15"
claxon = "0.4"        # FLAC decode
flacenc = "0.4"       # FLAC encode (pure Rust)
hound = "3"           # WAV
symphonia = { version = "0.5", features = ["all-codecs"] }

# Config
config = { version = "0.14", default-features = false, features = ["toml"] }
directories = "5"

# Test
insta = { version = "1", features = ["yaml"] }
proptest = "1"
tokio-test = "0.4"
