[package]
name = "booth-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "telephone-booth binary: wires HAL adapters to the booth-core state machine and runs the loop."
default-run = "telephone-booth"

[lints]
workspace = true

[[bin]]
name = "telephone-booth"
path = "src/main.rs"

[features]
default = ["mock", "audio", "operator", "simulator"]
mock = ["dep:booth-mock"]
audio = ["booth-pi/audio"]
operator = ["booth-pi/operator"]
pi = ["booth-pi/pi"]
systemd = []
# Interactive `--simulator` TUI. Requires `mock` (for MockGpioPort) and pulls
# in ratatui + crossterm.
simulator = ["mock", "dep:ratatui", "dep:crossterm", "dep:futures-util", "dep:tracing-appender"]

[dependencies]
booth-core = { path = "../booth-core" }
booth-hal = { path = "../booth-hal" }
booth-debug = { path = "../booth-debug" }
booth-metrics = { path = "../booth-metrics" }
booth-telemetry = { workspace = true }
booth-pi = { path = "../booth-pi" }
booth-mock = { path = "../booth-mock", optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { version = "0.2", optional = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
parking_lot = { workspace = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
futures-util = { workspace = true, optional = true }
time = { workspace = true, features = ["formatting"] }
uuid = { workspace = true }

[package.metadata.deb]
name = "telephone-booth"
maintainer = "David Jensenius"
copyright = "2024-2026, David Jensenius"
license-file = ["../../LICENSE", "0"]
extended-description = "Phone-side software for the Telephone Booth art installation. Drives a rotary phone via GPIO and talks to the operator backend."
section = "sound"
priority = "optional"
depends = "tailscale, alsa-utils"
assets = [
    ["target/release/telephone-booth", "/usr/bin/telephone-booth", "755"],
    ["../../README.md", "/usr/share/doc/telephone-booth/README.md", "644"],
    ["../../packaging/debian/telephone-booth.service", "/lib/systemd/system/telephone-booth.service", "644"],
    ["../../packaging/debian/telephone-booth-tailscale-serve.service", "/lib/systemd/system/telephone-booth-tailscale-serve.service", "644"],
    ["../../packaging/debian/telephone-booth.sysusers", "/usr/lib/sysusers.d/telephone-booth.conf", "644"],
    ["../../packaging/debian/telephone-booth.tmpfiles", "/usr/lib/tmpfiles.d/telephone-booth.conf", "644"],
    ["../../packaging/debian/config.example.toml", "/etc/phone-booth/config.example.toml", "644"],
    ["../../packaging/debian/env.example", "/etc/phone-booth/env", "640"],
    ["../../scripts/setup-tailscale-serve.sh", "/usr/share/telephone-booth/setup-tailscale-serve.sh", "755"],
]
conf-files = ["/etc/phone-booth/env"]
maintainer-scripts = "../../packaging/debian"
