[package]
name = "booth-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "telephone-booth binary: wires HAL adapters to the booth-core state machine and runs the loop."
default-run = "telephone-booth"

[lints]
workspace = true

[[bin]]
name = "telephone-booth"
path = "src/main.rs"

[features]
default = ["mock", "audio", "operator", "simulator"]
mock = ["dep:booth-mock"]
audio = ["booth-pi/audio"]
operator = ["booth-pi/operator"]
pi = ["booth-pi/pi"]
systemd = []
# Interactive `--simulator` TUI. Requires `mock` (for MockGpioPort) and pulls
# in ratatui + crossterm. The passive `--tui --attach` mode shares this TUI
# feature, so its WebSocket/TLS client dependencies are optional here too.
simulator = [
    "mock",
    "dep:ratatui",
    "dep:crossterm",
    "dep:futures-util",
    "dep:tracing-appender",
    "dep:reqwest",
    "dep:rustls",
    "dep:sha2",
    "dep:tokio-tungstenite",
    "dep:url",
]

[dependencies]
booth-core = { path = "../booth-core" }
booth-hal = { path = "../booth-hal" }
booth-debug = { path = "../booth-debug" }
booth-metrics = { path = "../booth-metrics" }
booth-telemetry = { workspace = true }
booth-pi = { path = "../booth-pi" }
booth-mock = { path = "../booth-mock", optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { version = "0.2", optional = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
futures-util = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
time = { workspace = true, features = ["formatting"] }
tokio-tungstenite = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true }

# `rustix::stdio::dup2_stderr` lets us point the process's FD 2 at the
# simulator log file so that C-level writers (alsa-lib in particular)
# can't corrupt the TUI by spewing directly to the terminal. Already in
# the lockfile transitively, so this adds no new build cost.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", default-features = false, features = ["std", "stdio"] }

[package.metadata.deb]
name = "telephone-booth"
maintainer = "David Jensenius"
copyright = "2024-2026, David Jensenius"
license-file = ["../../LICENSE", "0"]
extended-description = "Phone-side software for the Telephone Booth art installation. Drives a rotary phone via GPIO and talks to the operator backend."
section = "sound"
priority = "optional"
depends = "tailscale, alsa-utils"
recommends = "tmux, vmagent, unattended-upgrades"
assets = [
    ["target/release/telephone-booth", "/usr/bin/telephone-booth", "755"],
    ["../../README.md", "/usr/share/doc/telephone-booth/README.md", "644"],
    ["../../packaging/debian/telephone-booth.service", "/lib/systemd/system/telephone-booth.service", "644"],
    ["../../packaging/debian/telephone-booth-tailscale-serve.service", "/lib/systemd/system/telephone-booth-tailscale-serve.service", "644"],
    ["../../packaging/debian/telephone-booth-vmagent.service", "/lib/systemd/system/telephone-booth-vmagent.service", "644"],
    ["../../packaging/debian/telephone-booth.sysusers", "/usr/lib/sysusers.d/telephone-booth.conf", "644"],
    ["../../packaging/debian/telephone-booth.tmpfiles", "/usr/lib/tmpfiles.d/telephone-booth.conf", "644"],
    ["../../packaging/debian/config.example.toml", "/etc/phone-booth/config.example.toml", "644"],
    ["../../packaging/debian/env.example", "/etc/phone-booth/env", "640"],
    ["../../packaging/debian/vmagent.env.example", "/etc/phone-booth/vmagent.env", "640"],
    ["../../packaging/debian/vmagent.yaml", "/etc/phone-booth/vmagent.yaml", "644"],
    ["../../packaging/debian/telephone-booth-archive-keyring.gpg", "/usr/share/keyrings/telephone-booth-archive-keyring.gpg", "644"],
    ["../../packaging/debian/telephone-booth.list", "/etc/apt/sources.list.d/telephone-booth.list", "644"],
    ["../../packaging/debian/50-telephone-booth-unattended.conf", "/etc/apt/apt.conf.d/50-telephone-booth-unattended", "644"],
    ["../../scripts/setup-tailscale-serve.sh", "/usr/share/telephone-booth/setup-tailscale-serve.sh", "755"],
    ["../../scripts/telephone-booth-simulator-tmux.sh", "/usr/share/telephone-booth/telephone-booth-simulator-tmux.sh", "755"],
    ["../../scripts/telephone-booth-mode.sh", "/usr/sbin/telephone-booth-mode", "755"],
    ["../../packaging/debian/telephone-booth-simulator.service", "/lib/systemd/system/telephone-booth-simulator.service", "644"],
]
conf-files = [
    "/etc/phone-booth/env",
    "/etc/phone-booth/vmagent.env",
    "/etc/phone-booth/vmagent.yaml",
    "/etc/apt/sources.list.d/telephone-booth.list",
    "/etc/apt/apt.conf.d/50-telephone-booth-unattended",
]
maintainer-scripts = "../../packaging/debian"

[dev-dependencies]
tempfile = "3"
