[package]
name = "booth-pi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Raspberry Pi adapter for the Telephone Booth phone client (rppal GPIO + cpal/ALSA audio + reqwest HTTP)."

[lints]
workspace = true

[dependencies]
booth-hal = { path = "../booth-hal" }
booth-core = { path = "../booth-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
heapless = { workspace = true }
metrics = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

# Cross-platform audio + decode/encode. Enabled by the `audio` feature so the
# host TUI simulator on macOS / Linux can use them without the `pi` feature.
cpal = { workspace = true, optional = true }
flacenc = { workspace = true, optional = true }
claxon = { workspace = true, optional = true }
hound = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }

# rppal only builds on Linux (it uses Linux-specific termios / ioctl), so the
# dependency is also gated by `target_os = "linux"` to keep `--all-features`
# green on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { workspace = true, optional = true }

[features]
default = []
# Cross-platform audio playback + capture + FLAC handling. Pulls reqwest so
# remote-URL playback (operator audio) keeps working without the `operator`
# feature.
audio = ["dep:cpal", "dep:flacenc", "dep:claxon", "dep:hound", "dep:symphonia", "dep:reqwest", "dep:futures-util"]
# Cross-platform operator HTTP client.
operator = ["dep:reqwest"]
# Real Raspberry Pi build: cross-platform audio + operator plus rppal GPIO.
pi = ["audio", "operator", "dep:rppal"]

[dev-dependencies]
wiremock = "0.6"
