[package]
name = "booth-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "In-process telemetry bus and replay ring buffer for the Telephone Booth Rust client."

[lints]
workspace = true

[dependencies]
booth-hal = { path = "../booth-hal" }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
